add min version to mod.conf

--- a/mod.conf
+++ b/mod.conf
@@ -2,3 +2,4 @@ name = better_bookmarks
 description = keep location bookmarks like /sethome
 author = jkoop
 title = Better Bookmarks
+min_minetest_version = 5.0
